--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <i class="icon-home"></i>
             <p>首页</p>
         </div>
-        <div class="item waves-effect @@nav-3" data-href="user.html">
+        <div class="item waves-effect " data-href="login.html">
             <i class="icon-user"></i>
             <p>我</p>
         </div>
@@ -497,6 +497,8 @@
     <script type="text/javascript" src="js/iscroll/iscroll-probe.js"></script>
     <script type="text/javascript" src="js/swiper/swiper.min.js"></script>
     <script type="text/javascript" src="js/waves/waves.min.js"></script>
+    <script type="text/javascript" src="js/modalEffects/classie.js"></script>
+    <script type="text/javascript" src="js/modalEffects/modalEffects.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
     <!-- JavaScript over -->
 
