--- a/list.html
+++ b/list.html
@@ -19,7 +19,7 @@
 
 <body onload="loaded()">
     <!-- main start -->
-    <div class="main">
+    <div class="main nprogress-fade nprogress-out">
         <div class="scroller">
             <!-- list start -->
             <div class="title-list-video">
@@ -137,11 +137,32 @@
     <script type="text/javascript" src="js/iscroll/iscroll-probe.js"></script>
     <script type="text/javascript" src="js/swiper/swiper.min.js"></script>
     <script type="text/javascript" src="js/waves/waves.min.js"></script>
+    <script type="text/javascript" src="js/modalEffects/classie.js"></script>
+    <script type="text/javascript" src="js/modalEffects/modalEffects.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
     <!-- JavaScript over -->
 
     <script type="text/javascript">
+        // nprogress
+        NProgress.start();
 
+        function loaded() {
+
+            NProgress.done();
+            $('.nprogress-fade').removeClass('nprogress-out');
+
+            mainScroll = new IScroll('.main', {
+                scrollbars: 'custom',
+                fadeScrollbars: true,
+                shrinkScrollbars: 'scale',
+                preventDefaultException: {
+                    tagName: /^(INPUT|TEXTAREA|BUTTON|SELECT|IMG)$/
+                },
+                probeType: 2,
+                tap: true
+            });
+
+        }
     </script>
 
 </body>
