--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="list-video">
                     <!-- 封面标准尺寸372*210px -->
                     <!-- item start -->
-                    <a data-href="video.html" class="list-video-item">
+                    <a data-href="video-live.html" class="list-video-item">
                         <div class="list-video-cover">
                             <img class="cover-background" src="img/cover-background.png">
                             <div class="cover-image" style="background-image:url('http://placehold.it/372x210')"></div>
@@ -113,7 +113,7 @@
                     </a>
                     <!-- item over -->
                     <!-- item start -->
-                    <a data-href="video.html" class="list-video-item">
+                    <a data-href="video-live.html" class="list-video-item">
                         <div class="list-video-cover">
                             <img class="cover-background" src="img/cover-background.png">
                             <div class="cover-image" style="background-image:url('http://placehold.it/210x372')"></div>
@@ -124,7 +124,7 @@
                     </a>
                     <!-- item over -->
                     <!-- item start -->
-                    <a data-href="video.html" class="list-video-item">
+                    <a data-href="video-live.html" class="list-video-item">
                         <div class="list-video-cover">
                             <img class="cover-background" src="img/cover-background.png">
                             <div class="cover-image" style="background-image:url('http://placehold.it/372x372')"></div>
@@ -135,7 +135,7 @@
                     </a>
                     <!-- item over -->
                     <!-- item start -->
-                    <a data-href="video.html" class="list-video-item">
+                    <a data-href="video-live.html" class="list-video-item">
                         <div class="list-video-cover">
                             <img class="cover-background" src="img/cover-background.png">
                             <div class="cover-image" style="background-image:url('http://placehold.it/372x372')"></div>
