--- a/video.html
+++ b/video.html
@@ -46,10 +46,14 @@
                     <p class="label">时长</p>
                     <span>45'</span>
                 </div>
-                <div class="item hairline">
+                <!-- <div class="item hairline">
                     <p class="label">总时长</p>
                     <span>1080'</span>
-                </div>
+                </div> -->
+            </div>
+            <div class="video-introduce hairline">
+                <h3 class="title">剧情</h3>
+                <p>传媒学院学生布小谷心怀梦想，立志成为优秀的节目制作人。她的榜样是顶级制作人淳于乔，供职于星天制作公司，布小谷因此选择进入该公司实习。淳于乔貌似不近人情的性格令布小谷大失所望...</p>
             </div>
             <!-- info over -->
             <!-- anthology start -->
