--- a/login.html
+++ b/login.html
@@ -41,16 +41,16 @@
                 <div class="input-group-haruki">
                     <input class="input-field" type="tel" id="input-1" />
                     <label class="input-label" for="input-1">
-						<span class="input-label-content">手机号码</span>
-					</label>
+                        <span class="input-label-content">手机号码</span>
+                    </label>
                 </div>
                 <!-- group over -->
                 <!-- group start -->
                 <div class="input-group-haruki">
                     <input class="input-field" type="password" id="input-2" />
                     <label class="input-label" for="input-2">
-						<span class="input-label-content">密码</span>
-					</label>
+                        <span class="input-label-content">密码</span>
+                    </label>
                 </div>
                 <!-- group over -->
                 <!-- prompt start -->
@@ -86,23 +86,52 @@
     <!-- JavaScript over -->
 
     <script type="text/javascript">
+        // 修复ios下微信7.0键盘收起后Webview底部异常的问题
+        if (navigator.userAgent.match(/(iPhone|iPad|iPod|iOS)/i)) {
+            jQuery(document).delegate('input, textarea', 'blur', function() {
+                setTimeout(function() {
+                    jQuery('html').animate({
+                        height: '100.1vh'
+                    }, 100, function() {
+                        jQuery(this).animate({
+                            height: '100vh'
+                        }, 1);
+                    });
+                }, 100);
+            });
+        }
+        // 安卓键盘弹出时底部navbar隐藏
+        if (navigator.userAgent.match(/(android)/i)) {
+            var clientHeight = document.documentElement.clientHeight || document.body.clientHeight;
+            $(window).on('resize', function() {
+                var nowClientHeight = document.documentElement.clientHeight || document.body.clientHeight;
+                if (clientHeight > nowClientHeight) {
+                    $('footer.navbar').addClass('fix-android');
+                    $('footer.navbar').hide();
+                } else {
+                    $('footer.navbar').removeClass('fix-android');
+                    $('footer.navbar').show();
+                }
+            });
+        }
+        // haruki输入框样式控制
         (function() {
-			[].slice.call( document.querySelectorAll( 'input.input-field' ) ).forEach( function( inputEl ) {
-				if( inputEl.value.trim() !== '' ) {
-					classie.add( inputEl.parentNode, 'input-filled-parent' );
-				}
-				inputEl.addEventListener( 'focus', onInputFocus );
-				inputEl.addEventListener( 'blur', onInputBlur );
-			} );
-			function onInputFocus( ev ) {
-				classie.add( ev.target.parentNode, 'input-filled-parent' );
-			}
-			function onInputBlur( ev ) {
-				if( ev.target.value.trim() === '' ) {
-					classie.remove( ev.target.parentNode, 'input-filled-parent' );
-				}
-			}
-		})();
+            [].slice.call(document.querySelectorAll('input.input-field')).forEach(function(inputEl) {
+                if (inputEl.value.trim() !== '') {
+                    classie.add(inputEl.parentNode, 'input-filled-parent');
+                }
+                inputEl.addEventListener('focus', onInputFocus);
+                inputEl.addEventListener('blur', onInputBlur);
+            });
+            function onInputFocus(ev) {
+                classie.add(ev.target.parentNode, 'input-filled-parent');
+            }
+            function onInputBlur(ev) {
+                if (ev.target.value.trim() === '') {
+                    classie.remove(ev.target.parentNode, 'input-filled-parent');
+                }
+            }
+        })();
     </script>
 
 </body>
