--- a/register.html
+++ b/register.html
@@ -30,40 +30,40 @@
                 <div class="input-group-haruki input-group-error">
                     <input class="input-field" type="tel" id="input-1" />
                     <label class="input-label" for="input-1">
-						<span class="input-label-content">手机号码</span>
-					</label>
+                        <span class="input-label-content">手机号码</span>
+                    </label>
                 </div>
                 <!-- group over -->
                 <!-- group start -->
                 <div class="input-group-haruki">
                     <input class="input-field" type="text" id="input-2" />
                     <label class="input-label" for="input-2">
-						<span class="input-label-content">姓名</span>
-					</label>
+                        <span class="input-label-content">姓名</span>
+                    </label>
                 </div>
                 <!-- group over -->
                 <!-- group start -->
                 <div class="input-group-haruki">
                     <input class="input-field" type="email" id="input-3" />
                     <label class="input-label" for="input-3">
-						<span class="input-label-content">电子邮箱</span>
-					</label>
+                        <span class="input-label-content">电子邮箱</span>
+                    </label>
                 </div>
                 <!-- group over -->
                 <!-- group start -->
                 <div class="input-group-haruki">
                     <input class="input-field" type="password" id="input-4" />
                     <label class="input-label" for="input-4">
-						<span class="input-label-content">密码</span>
-					</label>
+                        <span class="input-label-content">密码</span>
+                    </label>
                 </div>
                 <!-- group over -->
                 <!-- group start -->
                 <div class="input-group-haruki">
                     <input class="input-field" type="password" id="input-5" />
                     <label class="input-label" for="input-5">
-						<span class="input-label-content">确认密码</span>
-					</label>
+                        <span class="input-label-content">确认密码</span>
+                    </label>
                 </div>
                 <!-- group over -->
                 <!-- prompt start -->
@@ -96,23 +96,38 @@
     <!-- JavaScript over -->
 
     <script type="text/javascript">
+        // 修复ios下微信7.0键盘收起后Webview底部异常的问题
+        if (navigator.userAgent.match(/(iPhone|iPad|iPod|iOS)/i)) {
+            jQuery(document).delegate('input, textarea', 'blur', function() {
+                setTimeout(function() {
+                    jQuery('html').animate({
+                        height: '100.1vh'
+                    }, 100, function() {
+                        jQuery(this).animate({
+                            height: '100vh'
+                        }, 1);
+                    });
+                }, 100);
+            });
+        }
+        // haruki输入框样式控制
         (function() {
-			[].slice.call( document.querySelectorAll( 'input.input-field' ) ).forEach( function( inputEl ) {
-				if( inputEl.value.trim() !== '' ) {
-					classie.add( inputEl.parentNode, 'input-filled-parent' );
-				}
-				inputEl.addEventListener( 'focus', onInputFocus );
-				inputEl.addEventListener( 'blur', onInputBlur );
-			} );
-			function onInputFocus( ev ) {
-				classie.add( ev.target.parentNode, 'input-filled-parent' );
-			}
-			function onInputBlur( ev ) {
-				if( ev.target.value.trim() === '' ) {
-					classie.remove( ev.target.parentNode, 'input-filled-parent' );
-				}
-			}
-		})();
+            [].slice.call(document.querySelectorAll('input.input-field')).forEach(function(inputEl) {
+                if (inputEl.value.trim() !== '') {
+                    classie.add(inputEl.parentNode, 'input-filled-parent');
+                }
+                inputEl.addEventListener('focus', onInputFocus);
+                inputEl.addEventListener('blur', onInputBlur);
+            });
+            function onInputFocus(ev) {
+                classie.add(ev.target.parentNode, 'input-filled-parent');
+            }
+            function onInputBlur(ev) {
+                if (ev.target.value.trim() === '') {
+                    classie.remove(ev.target.parentNode, 'input-filled-parent');
+                }
+            }
+        })();
     </script>
 
 </body>
