--- a/list.html
+++ b/list.html
@@ -17,7 +17,7 @@
 </head>
 
 
-<body onload="loaded()">
+<body>
     <!-- main start -->
     <div class="main nprogress-fade nprogress-out">
         <div class="scroller">
