--- a/user.html
+++ b/user.html
@@ -17,7 +17,7 @@
 </head>
 
 
-<body onload="loaded()">
+<body>
     <!-- footer start -->
     <footer class="navbar">
         <div class="item waves-effect " data-href="index.html">
