--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="img/logo-topbar.png">
         </div>
         <div class="language">
-            <a href="#">EN</a>
+            <a href="#" class="hairline">EN</a>
         </div>
     </header>
 
